--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ button {
 
 .justify-between {
   justify-content: space-between;
+  margin-top: 30px;
 }
 
 .justify-center {
@@ -374,5 +375,20 @@ h3 {
 
   .flex.gap-4 button {
     width: 100% !important;
+  }
+}
+
+/* Checkout Page Grid */
+.checkout-grid {
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  gap: 4rem;
+}
+
+@media (max-width: 768px) {
+  .checkout-grid {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
 }
